# ftl

./: .editorconfig  .gdb_history  .gdbinit  .gitignore  .rustfmt.toml  Cargo.toml  DESIGN.md  Dockerfile  Makefile  README.md  RETHINKING.md  boot.spec.json  build.sh  embed-symbol-table.py  ftl.sh  gdbinit  idl.json  kernel.symbols  mkinitfs.ts  package.json  ping.json  prettify-kernel-log.py  run.sh  rust-toolchain.toml  rustfmt.toml  serial.txt  tsconfig.json  x
api/: Cargo.toml  boot.rs  channel.rs  collections.rs  entrypoint.rs  environ.rs  event_loop.rs  event_poll.rs  eventloop.rs  folio.rs  handle.rs  lib.rs  mainloop.rs  prelude.rs  print.rs  syscall.rs  thread.rs
api/arch/riscv64/: mod.rs
api/device/: mmio.rs
api/sync/: mod.rs  mutex.rs
api/task/: fiber.rs  mod.rs
apps/goldfish/: Cargo.toml  app.spec.json  main.rs
apps/goldfish_rtc/: Cargo.toml  app.spec.json  main.rs
apps/http_server/: Cargo.toml  app.spec.json  main.rs
apps/http_server/src/: connection.rs  index.html  main.rs
apps/ping_client/: Cargo.toml  app.spec.json  build.rs  main.rs
apps/ping_server/: Cargo.toml  app.spec.json  main.rs
apps/tcpip/: Cargo.toml  app.spec.json  device.rs  main.rs  smotcp_log.rs  tcpip.rs
apps/tcpip/src/: main.rs
apps/virtio_net/: Cargo.toml  app.spec.json  build.rs  main.rs  virtio_net.rs
apps/virtio_net/src/: main.rs
apps/virtio_net/src/virtio/: Untitled  mod.rs
devtools/: Cargo.toml  bootfs.rs  lib.rs  main.rs  spec.rs
devtools/cli/: color.rs  mod.rs
devtools/cli/commands/: autogen.rs
devtools/commands/: autogen.rs  generate_loader_crate.rs  mkbootfs.rs  mod.rs
fibers/virtio_net/: Cargo.toml  lib.rs  spec.yaml
ftl/: Cargo.toml  allocator.rs  backtrace.rs  boot.rs  channel.rs  error.rs  event_queue.rs  giant_lock.rs  handle.rs  lib.rs  logger.rs  panic.rs  poll.rs  print.rs  result.rs
ftl/arch/: mod.rs
ftl/arch/host/: mod.rs
ftl/arch/riscv64/: mod.rs
ftl/libs/ftl_autogen/: lib.rs
ftl/libs/ftl_autogen/fibers/: mod.rs
ftl/libs/ftl_autogen/fibers/riscv_plic/: mod.rs
ftl/libs/ftl_autogen/fibers/virtio_net/: mod.rs
ftl/libs/ftl_loader/: Cargo.toml  lib.rs
ftl/sync/: channel.rs  mod.rs  mutex.rs
ftl/task/: fiber.rs  scheduler.rs
kernel/: Cargo.toml  address.rs  app_loader.rs  autopilot.rs  backtrace.rs  boot.rs  bootfs.rs  buffer.rs  build.rs  channel.rs  cpu_local.rs  cpuvar.rs  device_tree.rs  event_poll.rs  fiber.rs  folio.rs  giant_lock.rs  handle.rs  interrupt.rs  kernel_app.rs  lib.rs  loader.rs  lock.rs  main.rs  memory.rs  memory_pool.rs  object.rs  panic.rs  poll.rs  print.rs  process.rs  ref_count.rs  ref_counted.rs  result.rs  scheduler.rs  signal.rs  sleep.rs  spinlock.rs  startup.rs  syscall.rs  (+7 more)
kernel/arch/: mod.rs
kernel/arch/arm64/: backtrace.rs  cpuvar.rs  gic_v2.rs  interrupt.S  mod.rs  thread.rs  vmspace.rs
kernel/arch/host/: mod.rs
kernel/arch/riscv64/: backtrace.rs  boot.rs  context.rs  cpuvar.rs  csr.rs  idle.rs  interrupt.S  interrupt.rs  mod.rs  page_table.rs  plic.rs  riscv64-qemu-virt.json  riscv64-qemu-virt.ld  sbi.rs  switch.rs  thread.rs  trap.rs  vmspace.rs
kernel/arch/user/: mod.rs
kernel/arch/x64/: backtrace.rs  cpuvar.rs  gdt.rs  idle.rs  idt.S  idt.rs  init.rs  interrupt.rs  io_apic.rs  local_apic.rs  mod.rs  mptable.rs  multiboot.rs  pic.rs  serial.rs  switch.rs  thread.rs  tss.rs  vmspace.rs
kernel/autopilot/: device_tree.rs  mod.rs
kernel/src/: address.rs  boot.rs  channel.rs  cpuvar.rs  error.rs  handle.rs  hello.S  initfs.rs  interrupt.rs  loader.rs  lx.rs  main.rs  memory.rs  panic.rs  print.rs  process.rs  scheduler.rs  server.rs  service.rs  shared_ref.rs  sink.rs  syscall.rs  thread.rs  timer.rs  vmarea.rs  vmspace.rs
kernel/src/arch/host/: mod.rs
kernel/src/arch/x64/: boot.rs  bootinfo.rs  console.rs  cpuvar.rs  gdt.rs  grub.cfg  idle.rs  idt.rs  io_apic.rs  ioport.rs  kernel.json  kernel.ld  local_apic.rs  mod.rs  mp_table.rs  msr.rs  multiboot.rs  pci.rs  pic.rs  pvh.rs  semihosting.rs  syscall.rs  thread.rs  timer.rs  vmspace.rs
kernel/src/isolation/: mod.rs
kernel/utils/: mmio.rs
libs/rust/ftl/: Cargo.toml
libs/rust/ftl/src/: aio.rs  allocator.rs  application.rs  buffer.rs  channel.rs  collections.rs  dmabuf.rs  error.rs  eventloop.rs  handle.rs  interrupt.rs  lib.rs  log.rs  message.rs  panic.rs  pci.rs  prelude.rs  print.rs  process.rs  server.rs  service.rs  sink.rs  sync.rs  syscall.rs  thread.rs  time.rs  vmarea.rs  vmspace.rs
libs/rust/ftl/src/aio/: channel.rs  executor.rs  mod.rs
libs/rust/ftl/src/arch/: mod.rs
libs/rust/ftl/src/arch/host/: mod.rs
libs/rust/ftl/src/arch/x64/: mod.rs  start.rs  user.json  user.ld
libs/rust/ftl/src/driver/: dmabuf.rs  mod.rs
libs/rust/ftl_api/: Cargo.toml  allocator.rs  channel.rs  driver.rs  environ.rs  folio.rs  handle.rs  init.rs  interrupt.rs  lib.rs  log.rs  mainloop.rs  message.rs  panic.rs  poll.rs  prelude.rs  print.rs  signal.rs  start.rs  syscall.rs  vmspace.rs
libs/rust/ftl_api/arch/: mod.rs
libs/rust/ftl_api/arch/arm64/: arm64-user.json  start.S
libs/rust/ftl_api/arch/riscv64/: mod.rs  riscv64-user.json  riscv64-user.ld  start.S
libs/rust/ftl_api/arch/x64/: start.S  x64-user.json  x64-user.ld
libs/rust/ftl_api/driver/: interrupt_controller.rs  mmio.rs  mod.rs
libs/rust/ftl_api/src/: allocator.rs  error.rs  handle.rs  lib.rs  panic.rs  print.rs  start.rs  thread.rs  upcall.rs  vmarea.rs  vmspace.rs
libs/rust/ftl_api/src/arch/x64/: server.json  (+1 more)
libs/rust/ftl_api_autogen/: Cargo.toml  lib.rs
libs/rust/ftl_autogen2/: Cargo.toml  autogen.rs.j2  lib.rs
libs/rust/ftl_autogen2/templates/: app_autogen.rs.j2
src/kernel/: Cargo.toml  address.rs  asm.rs  cpu_local.rs  giant_lock.rs  lock.rs  main.rs  memory.rs  memory_pool.rs  object.rs  panic.rs  print.rs  process.rs  ref_count.rs  riscv64-qemu-virt.json  riscv64-qemu-virt.ld  sbi.rs  switch.rs  test.rs  thread.rs
src/kernel/arch/riscv64/: boot.S  boot.rs  mod.rs  riscv64-qemu-virt.json  riscv64-qemu-virt.ld  switch.rs  thread.rs
tools/idlc/: Cargo.toml  main.rs
tools/idlc/templates/: ftl_api_autogen.rs.j2  ftl_autogen.rs.j2
(+374 files in other folders)
