[workspace.package]
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2024"

[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/rust/*",
]

[workspace.dependencies]
ftl = { path = "libs/rust/ftl" }
ftl_utils = { path = "libs/rust/ftl_utils" }
ftl_bump_allocator = { path = "libs/rust/ftl_bump_allocator" }
ftl_arrayvec = { path = "libs/rust/ftl_arrayvec" }
ftl_malloc = { path = "libs/rust/ftl_malloc" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
