[package]
name = "ftl_api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
hashbrown = "0.14.3"
spin = "0.9.8"
ftl_kernel = { path = "../kernel" }
ftl_types = { path = "../libs/ftl_types" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
