[package]
name = "devtools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devtools"
path = "main.rs"

[dependencies]
anyhow = "1.0.71"
better-panic = "0.3.0"
clap = { version = "4.3.11", features = ["derive"] }
crossterm = "0.26.1"
essentials = { path = "../libs/essentials" }
bootfs = { path = "../libs/bootfs" }
tempfile = "3.6.0"
