[package]
name = "ftl_devtools"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "ftl_devtools"
path = "main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
