[package]
name = "ftl_kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
hashbrown = "0.14.3"
spin = "0.9.8"
fdt-rs = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

bump_allocator = { path = "../libs/bump_allocator" }
ftl_types = { path = "../libs/ftl_types" }
