[package]
name = "ftl_kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
arrayvec = { workspace = true }
ftl_utils = { workspace = true }
ftl_types = { workspace = true }
ftl_bump_allocator = { workspace = true }
ftl_elf = { workspace = true }
hashbrown = { workspace = true }
