[package]
name = "ftl_kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
ftl_utils = { workspace = true }
ftl_types = { workspace = true }
ftl_bump_allocator = { workspace = true }
ftl_elf = { workspace = true }
ftl_autogen = { workspace = true }
ftl_inlinedvec = { workspace = true }
hashbrown = { workspace = true }
fdt-rs = { workspace = true }

# TODO: Remove this dependency
spin = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
minijinja = { workspace = true }
ftl_types = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
