[package]
name = "http_server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "http_server"
path = "main.rs"

[dependencies]
ftl_api = { workspace = true }
httparse = { workspace = true }

[build-dependencies]
ftl_autogen2 = { workspace = true }
