[package]
name = "tcpip"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "tcpip"
path = "main.rs"

[dependencies]
ftl_api = { workspace = true }
ftl_api_autogen = { workspace = true }
smoltcp = { workspace = true, features = ["log", "alloc", "socket-tcp", "proto-ipv4"] }
