[package]
name = "tcpip"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ftl = { workspace = true }
smoltcp = { workspace = true, default-features = false, features = [
    "log",
    "alloc",
    "medium-ethernet",
    "socket-dhcpv4",
    "socket-tcp",
    "proto-ipv4",
] }
