[package]
name = "virtio_net"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
ftl_api = { path = "../../api" }
ftl_autogen = { path = "../../libs/ftl_autogen" }
virtio = { path = "../../libs/virtio" }
packetbuf = { path = "../../libs/packetbuf" }
