[package]
name = "kernel"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2021"

[[bin]]
name = "kernel"
path = "main.rs"

[dependencies]
linked_list_allocator = "0.10.5"
utils = { path = "../utils" }
proc_macros = { path = "../proc_macros" }
bump_allocator = { path = "../bump_allocator" }
riscv = { path = "../riscv" }
paste = "1.0.12"
