[package]
name = "ftl_idlc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "ftl_idlc"
path = "main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
ftl_types = { workspace = true }
minijinja = { workspace = true }
