[package]
name = "ftl"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ftl_macros = { path = "../ftl_macros" }
ftl_types = { workspace = true }
ftl_arrayvec = { workspace = true }
ftl_utils = { workspace = true }
talc = { workspace = true }
spin = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
