[package]
name = "ftl_api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
ftl_types = { workspace = true }
spin = { workspace = true }
linked_list_allocator = { workspace = true }
hashbrown = { workspace = true }

ftl_api_macros = { workspace = true }
ftl_inlinedvec ={ workspace = true }
