[package]
name = "ftl_api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
spin = { workspace = true }
linked_list_allocator = { workspace = true }
hashbrown = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }

ftl_types = { workspace = true }
ftl_utils = { workspace = true }
