[package]
name = "ftl_api_autogen"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
ftl_api = { workspace = true }
ftl_autogen = { workspace = true, features = ["api"] }
ftl_types = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
