[package]
name = "ftl_autogen2"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
ftl_types = { workspace = true }
minijinja = { workspace = true }
